# FSExam

./: .gitignore  README.md  Sensors.sql  pyproject.toml  requirments.txt  sensorinfo.sql
app/: create_db.py  db.py  fastapi_server.py  sensors.db
