[tool.poetry]
name = "sensors"
version = "0.1.0"
description = ""
authors = ["Vitaliy Dashkevych"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
